--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-   <name>stereo_visual_odometry_ros</name>
+   <name>stereo_visual_odometry</name>
    <version>1.0.0</version>
    <description>This package is for ROS2 wrapper of stereo visual odometry.</description>
    <maintainer email="hyun91015@gmail.com">Changhyeon Kim</maintainer>
