--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -12,7 +12,9 @@ include_directories ("/usr/include/opencv4/")
 include_directories(${Eigen3_INCLUDE_DIRS})
 
 set(SRC ${SRC}
-  stereo_visual_odometry.cpp)
+  stereo_visual_odometry.cpp
+  optimization/summary.cc
+)
 
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O2 -pthread -pg")
